--- a/index.css
+++ b/index.css
@@ -1,8 +1,4 @@
-.row {
-  display: flex;
-}
-
-.row .cell {
-  height: 20px;
-  width: 20px;
+body {
+  background-color: black;
+  color: white;
 }
